removed black rectangles at the end of line

--- a/doc/cs/kap01.tex
+++ b/doc/cs/kap01.tex
@@ -70,7 +70,7 @@ Git je distribuovaný systém správy verzí, který se velmi často používá 
 
 Při vývoji aplikace používáme několik větví: \textit{master}, \textit{develop} a \textit{feature} větve.
 \begin{itemize}
-	\item \textit{Feature} větve používáme při programování nové funkcionality. Typicky máme pro každou funkcionalitu samostatnou větev, jež se ve většině případů jmenuje \textit{feature/popis-funkcionality}.
+	\item \textit{Feature} větve používáme při programování nové funkcionality. Typicky má\-me pro každou funkcionalitu samostatnou větev, jež se ve většině případů jmenuje \textit{feature/popis-funkcionality}.
 	\item \textit{Develop} je větev, do které se provádí \textit{merge} z \textit{feature} větví. Při vývoji nové funkcionality tedy nejprve vytvoříme novou větev a po dokončení vývoje provedeme \textit{merge} do větve \textit{develop}.
 	\item \textit{Master} větev obsahuje verzi aplikace, která je plně funkční a lze spustit. V případě, že dokončíme nějakou ucelenou část aplikace a ověříme, že funguje správně, můžeme provést \textit{merge} z větve \textit{develop} do \textit{master}.
 \end{itemize}
