--- a/doc/cs/user-doc.tex
+++ b/doc/cs/user-doc.tex
@@ -134,7 +134,7 @@ Následující podkapitoly obsahují jednotlivé uživatelské scénáře rozeps
 \begin{itemize}
 	\item Nejprve přejdeme na stránku nějakého kurzu, jehož jsme členy.
 	\item V seznamu testů vybereme ten, který chceme odevzdat.
-	\item Pokud jsme tento test zatím neodevzdali, aplikace nás přesměruje na stránku s odevzdáním daného testu, jak můžeme vidět na obrázku \ref{fig:test-submit}. V případě, že jsme test již odevzdali, zobrazí se stránka s vyhodnoceným řešením.
+	\item Pokud jsme tento test zatím neodevzdali, aplikace nás přesměruje na strá\-nku s odevzdáním daného testu, jak můžeme vidět na obrázku \ref{fig:test-submit}. V případě, že jsme test již odevzdali, zobrazí se stránka s vyhodnoceným řešením.
 	\item V horní části vidíme název testu, deadline -- čas, do kterého je třeba test odevzdat a několik dalších informací. Test následně vyplníme, u některých otázek máme na výběr z možností odpovědí.
 	\item Stisknutím tlačítka \textit{Save answers} dojde k uložení odpovědí. Můžeme tedy stránku opustit, příp. zavřít a při dalším načtení stránky se načtou i uložené odpovědi.
 	\item Odevzdání testu provádíme pomocí tlačítka \textit{Submit}. Tato akce je nevratná, po odevzdání testu jej není možné nijak upravovat ani znovu odevzdat.
@@ -262,7 +262,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \subsection{Manuální oprava testu}
 \begin{itemize}
 	\item Přejdeme na stránku s detailem testu, ve spodní části stránky nalezneme sekci s odeslanými řešeními. Pokud ještě žádný student řešení neodeslal, tato sekce se nezobrazí.
-	\item U vybraného řešení klikneme na tlačítko Detail, tím se dostaneme na stránku s vyhodnoceným řešením.
+	\item U vybraného řešení klikneme na tlačítko Detail, tím se dostaneme na strá\-nku s vyhodnoceným řešením.
 	\item Ve spodní část stránky se nachází sekce \textit{Review}.
 	\item V případě, že nechceme upravit body, ani přidat žádné komentáře, klikneme na tlačítko \textit{Mark as reviewed}, tím označíme test jako revidovaný.
 	\item Pokud chceme upravit body, či přidat komentáře, stiskneme tlačítko \textit{Update}. U každé otázky se zobrazí formuláře sloužící k úpravě bodů a přidání komentáře, jak můžeme vidět na obrázku \ref{fig:submission-manual-review}.
