programmer docs updated

--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -265,6 +265,7 @@ Dojde k vytvoření databáze na lokální instanci SQL Serveru.
 
 Pro spuštění aplikace zadejte tyto příkazy:
 \begin{lstlisting}
+dotnet build
 cd CourseManagementSystem.API
 dotnet run
 \end{lstlisting}
