code fragments added to program tags

--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -61,7 +61,7 @@
 \usepackage{float}
 
 \floatstyle{ruled}
-\newfloat{program}{h}{lop}
+\newfloat{program}{thp}{lop}
 \floatname{program}{Kód}
 
 \graphicspath{ {../img/} }
@@ -272,7 +272,7 @@ dotnet run
 
 Tímto dojde ke spuštění aplikace. Ve výpisu příkazu \textit{dotnet run} na příkazové řádce bychom nyní měli vidět URL, na které se aplikace nachází (typicky je to URL \url{https://localhost:5001}). Otevřeme webový prohlížeč na této URL a následně se zobrazí domovská stránka aplikace.
 
-\section{Generování testovacích dat}
+\subsection{Generování testovacích dat}
 
 \include{user-doc}
 
