--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -116,7 +116,7 @@ Tímto bych chtěl poděkovat vedoucímu práce doc. RNDr. Janu Kofroňovi, Ph.D
 Cílem práce je vytvořit webovou aplikaci pro správu různých typů výukových kurzů, jako například vysokoškolské přednášky a cvičení, předměty na základní či střední škole nebo také libovolný zájmový kurz. Program bude poskytovat rozhraní jak pro správce – učitele, tak pro uživatele – studenty. Bude umožňovat vytváření a správu kurzů. Správci kurzu budou moci měnit jeho obsah (přidávat, odebírat materiály, apod.) a zakládat nové úkoly a testy, které budou uživatelé následně vyplňovat. Otázky s nabídkou odpovědí bude systém vyhodnocovat automaticky, zbytek bude správce kurzu hodnotit ručně. Uživatel si pak bude moci v daném kurzu prohlédnout všechny známky, a také opravené testy a úkoly.
 }
 \def\AbstraktEN{%
-Abstract.
+The aim of this thesis is to create a web application for the management of various types of educational courses, such as university lectures, labs, high school subjects or language courses. The app will provide an interface for both administrators - teachers and users - students. It will allow the creation and management of courses. Course administrators will be able to change its content (add, remove materials, etc.) and create new assignments that will be later submitted by the students. The system will evaluate the questions with choice of answers automatically, the rest will be evaluated manually by the course administrator. Users will be able to view all their grades as well as the reviewed assignments.
 }
 
 % 3 až 5 klíčových slov (doporučeno), každé uzavřeno ve složených závorkách
