small changes in the intro, redundant comments removed

--- a/doc/cs/uvod.tex
+++ b/doc/cs/uvod.tex
@@ -1,7 +1,7 @@
 \chapter{Úvod}
 
-IT technologie pomáhají v každodenním životě s jeho organizací a dají se využít ke zvýšení
-komfortu. Přehled informací o studiu, ať už se jedná o základní, střední, či vysokou školu, může výrazně ulehčit orientaci ve větším množství úkolů a studovaných předmětů.
+Informační technologie pomáhají v každodenním životě s jeho organizací a dají se využít ke zvýšení
+jeho komfortu. Přehled informací o studiu, ať už se jedná o základní, střední, či vysokou školu, může výrazně ulehčit orientaci ve větším množství úkolů a studovaných předmětů.
 
 Cílem práce je vytvořit webovou aplikaci pro správu různých typů výukových kurzů, jako například vysokoškolské přednášky a cvičení, předměty na základní či střední škole nebo také libovolný zájmový kurz. Program bude poskytovat rozhraní jak pro správce – učitele, tak pro uživatele – studenty. Bude umožňovat vytváření a správu kurzů. Správci kurzu budou moci měnit jeho obsah (přidávat, odebírat materiály, apod.) a zakládat nové úkoly a testy, které budou uživatelé následně vyplňovat. Otázky s nabídkou odpovědí bude systém vyhodnocovat automaticky, zbytek bude správce kurzu hodnotit ručně. Uživatel si pak bude moci v daném kurzu prohlédnout všechny známky, a také opravené testy a úkoly.
 
