--- a/doc/cs/prace.tex
+++ b/doc/cs/prace.tex
@@ -230,6 +230,7 @@ The aim of this thesis is to create a web application for the management of vari
 	\item SQL -- Structured Query Language
 	\item URL -- Uniform Resource Locator
 	\item LINQ -- Language Integrated Query
+	\item UI -- Uživatelské rozhraní
 	
 \end{itemize}
 
