added limit info to user documentation

--- a/doc/cs/user-doc.tex
+++ b/doc/cs/user-doc.tex
@@ -190,7 +190,7 @@ Následující akce mohou vykonávat pouze administrátoři příslušného kurz
 \begin{itemize}
 	\item Přejdeme na stránku daného kurzu a najdeme sekci se soubory.
 	\item Ve formuláři pro přidání nového souboru klikneme na tlačítko s textem \textit{Choose file}.
-	\item Vybereme soubor, který chceme sdílet a formulář potvrdíme.
+	\item Vybereme soubor, který chceme sdílet a formulář potvrdíme. Limit pro nahrání souboru je 10 MB.
 	\item Soubor se následně zobrazí v seznamu sdílených souborů, který je dostupný všem členům kurzu.
 	\item Pokud bychom chtěli soubor následně smazat, klikneme na tlačítko \textit{Remove}.
 \end{itemize}
